# snake3d

./: .gitignore  LICENSE  README.md  index.html  main.py  pyproject.toml
.github/workflows/: build.yml
snake/: __init__.py  camera.py  constants.py  game.py  math3d.py  renderer.py
web/: index.html
